ntfy/ntfy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy
  namespace: ntfy
  labels:
    app.kubernetes.io/name: ntfy
    app.kubernetes.io/component: notification
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ntfy
      app.kubernetes.io/component: notification
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ntfy
        app.kubernetes.io/component: notification
    spec:
      containers:
        - name: ntfy
          image: binwiederhier/ntfy:v2.27.0
          args: ["serve"]
          ports:
            - containerPort: 80
              name: web
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /v1/health
              port: web
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /v1/health
              port: web
            initialDelaySeconds: 10
            periodSeconds: 5
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
            requests:
              cpu: 200m
              memory: 64Mi
          volumeMounts:
            - mountPath: /var/cache/ntfy/attachments
              subPath: attachments
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: ntfy
