ntfy/ntfy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ntfy
  namespace: ntfy
  labels:
    app.kubernetes.io/name: ntfy
    app.kubernetes.io/component: notification
spec:
  selector:
    app.kubernetes.io/name: ntfy
    app.kubernetes.io/component: notification
  ports:
    - protocol: TCP
      port: 80
      targetPort: web
